# speedyj

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/speedyj/: speedyj-impl.hpp  speedyj-qt.hpp  speedyj.hpp
src/: speedyj-qt.cpp  speedyj.cpp
test/: CMakeLists.txt  stream.cpp
